--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -18,4 +18,5 @@
 
     <!-- Core theme CSS -->
     <link href="/css/styles.css" rel="stylesheet" />
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
