--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
                         <a href="/posts/<%= post._id %>">
                             <h2 class="post-title"><%= post.title %></h2>
                             <h3 class="post-subtitle">
-                                <%= post.body.length > 150 ? post.body.substring(0, 150) + '...' : post.body %>
+                                <%= post.excerpt %>
                             </h3>
                         </a>
                         <p class="post-meta">
