--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,11 @@
                         <label for="password">Mot de passe</label>
                     </div>
                     <button class="btn btn-primary text-uppercase" type="submit">Se connecter</button>
+                    <a class="btn btn-primary text-uppercase" href="/auth/register" >Créer mon compte</a>
                 </form>
+                    <div class="text-center mt-3">
+                        <a href="/auth/forgot-password">Mot de passe oublié ?</a>
+                    </div>
             </div>
         </div>
     </div>
