--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -10,8 +10,8 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1><%= status %></h1>
-                    <span class="subheading"><%= message %></span>
+                    <h1>404</h1>
+                    <span class="subheading">Page introuvable</span>
                 </div>
             </div>
         </div>
@@ -22,7 +22,10 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7 text-center">
+
+                <p>Désolé, aucune page à cette adresse.</p>
                 <a class="btn btn-primary text-uppercase" href="/">Retour à l’accueil</a>
+
             </div>
         </div>
     </div>
