--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -10,8 +10,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1><%= status %></h1>
-                    <span class="subheading"><%= message %></span>
+                    <h1>Nouveau mot de passe</h1>
                 </div>
             </div>
         </div>
@@ -21,8 +20,21 @@
 <main class="mb-4">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7 text-center">
-                <a class="btn btn-primary text-uppercase" href="/">Retour à l’accueil</a>
+            <div class="col-md-10 col-lg-8 col-xl-7">
+
+                <%- include('layouts/flash') %>
+
+                <form action="/auth/reset-password/<%= token %>" method="POST">
+                    <div class="form-floating mb-3">
+                        <input class="form-control" id="password" name="password" type="password" placeholder="Nouveau mot de passe" required />
+                        <label for="password">Nouveau mot de passe</label>
+                    </div>
+
+                    <button class="btn btn-primary text-uppercase w-100" type="submit">
+                        Valider
+                    </button>
+                </form>
+
             </div>
         </div>
     </div>
